# hindsight-desktop

./: .gitignore  README.md
packaging/: README.md
packaging/homebrew/: hindsight.rb
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  supervisor.rs
