[package]
name = "hindsight-desktop"
version = "0.1.3"
edition = "2021"
description = "Menu-bar supervisor for a local Hindsight (hindsight-embed) instance"
license = "Apache-2.0"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
open = "5"
dirs = "5"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
